[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["nagchanallen <nagisawags@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
black = "^23.3.0"
flask-socketio = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
